Convert geetest wrapper into TS and restructure things
- Add TS types
- Use a function instead of a class
- Rename mutation to requestOTP
- Access the geetest instance from the context

--- a/default.yaml
+++ b/default.yaml
@@ -71,6 +71,10 @@ test_accounts:
 
 sms_provider: "twilio"
 
+geetest:
+  id: "GEETEST_ID_VALUE"
+  key: "GEETEST_KEY_VALUE"
+
 limits:
   requestPhoneCode:
     points: 4
